<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/classicBlue"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:textColor="@color/classicBlue"
            tools:ignore="MissingConstraints" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:timePickerMode="spinner"
            android:theme="@style/ModifyTimePickerTheme"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="@id/alarmOnOffBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/alarmOnOffBtn"
            android:text="@string/alarm"
            android:textSize="12sp"
            android:textColor="@color/classicBlue"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarmOnOffBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timePicker"
            android:thumb="@drawable/switch_thumb"
            app:track="@drawable/selector_switch"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/importanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/alarmOnOffBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/importance"
            android:textSize="12sp"
            android:textColor="@color/classicBlue"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/importanceText"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints" >

            <RadioButton
                android:id="@+id/veryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very"
                android:buttonTint="@color/red"
                android:textColor="@color/red"/>

            <RadioButton
                android:id="@+id/middleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle"
                android:buttonTint="@color/blue"
                android:textColor="@color/blue"/>

            <RadioButton
                android:id="@+id/lessBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/little"
                android:buttonTint="@color/yellow"
                android:textColor="@color/yellow"/>
        </RadioGroup>

        <Button
            android:id="@+id/saveScheduleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#00ff0000"
            android:textColor="@color/classicBlue"
            android:text="@string/save"
            android:gravity="end"
            android:fontFamily="@font/sc_dream7"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>